codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__catalog_model_session_header_unknown_model.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 99
expression: rendered
---
Lemex (v<VERSION>)
model: us.openai.gpt-5.6-luna high
directory: /tmp/thread-settings
